# conference-crawler

./: .gitignore  pyproject.toml
apps/crawler/: crawler.py  settings.py  urls.py  views.py
apps/crawler/data/: ase-2022.json  esec-fse-2022.json  icpc-2022.json  icse-2022.json  icst-2022.json  issta-2022.json  msr-2022.json  pldi-2022.json  popl-2023.json
apps/crawler/static/crawler/: style.css
apps/crawler/templates/crawler/: details.html  index.html
crawler/crawler/: settings.py
